# mood-diary

./: .dockerignore  .flake8  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  locustfile.py  pyproject.toml
.github/workflows/: main.yaml
mood_diary/backend/: app.py  config.py  main.py
mood_diary/backend/database/: cache.py  db.py
mood_diary/backend/exceptions/: base.py  mood.py  user.py
mood_diary/backend/repositories/: base.py  mood.py  user.py
mood_diary/backend/repositories/sqlite/: mood.py  user.py
mood_diary/backend/repositories/sсhemas/: mood.py  user.py
mood_diary/backend/routes/: auth.py  dependencies.py  mood.py
mood_diary/backend/services/: mood.py  user.py
mood_diary/backend/utils/: password_hasher.py  token_manager.py
mood_diary/common/api/schemas/: auth.py  mood.py  token.py
mood_diary/frontend/: main.py  main_funcs.py
mood_diary/frontend/pages/: authorization.py  calendar.py  history.py  profile.py  registration.py
mood_diary/frontend/shared/api/: api.py
mood_diary/frontend/shared/helper/: check_passwords.py  cookie_manager.py  requests_session.py
scripts/: format.py  test.py
tests/: conftest.py  password_hasher_test.py
tests/backend/: test_config.py  test_main.py
tests/backend/repositories/sqlite/: base_fixtures.py  test_moodstamp_repository.py  test_user_repository.py
tests/backend/routes/: test_auth_router.py  test_dependencies.py  test_mood_router.py
tests/backend/services/: test_mood_service.py  test_user_service.py
tests/backend/utils/: test_token_manager.py
tests/frontend/: test_api.py  test_calendar.py  test_history.py  test_main_funcs.py  test_registration.py
tests/frontend/shared/: test_api.py  test_check_passwords.py
tests/frontend/shared/helper/: test_check_passwords.py  test_cookie_manager.py  test_requests_session.py
