[project]
name = "mood_diary"
version = "0.1.0"
description = ""
authors = [
    { name = "Azamat Bayramov", email = "a.bayramov@innopolis.university" },
    { name = "Darya Koncheva", email = "d.koncheva@innopolis.university" },
    { name = "Matthew Rusakov", email = "m.rusakov@innopolis.university" },
    { name = "Denis Mikhailov", email = "d.mikhailov@innopolis.university" },
    { name = "Ilya Zubkov", email = "i.zubkov@innopolis.university" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "streamlit (>=1.44.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
