[project]
name = "mood_diary"
version = "0.1.0"
description = ""
authors = [
    { name = "Azamat Bayramov", email = "a.bayramov@innopolis.university" },
    { name = "Darya Koncheva", email = "d.koncheva@innopolis.university" },
    { name = "Matthew Rusakov", email = "m.rusakov@innopolis.university" },
    { name = "Denis Mikhailov", email = "d.mikhailov@innopolis.university" },
    { name = "Ilya Zubkov", email = "i.zubkov@innopolis.university" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "extra-streamlit-components-better-cookie-manager (>=0.0.10,<0.0.11)",
    "pandas (>=2.2.3,<3.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "streamlit-calendar (>=1.3.0,<2.0.0)",
    "bleach (>=6.0.0,<7.0.0)",
    "fastapi_csrf_protect (>=1.0.0,<2.0.0)",
    "redis (>=5.0.1,<6.0.0)",
]

[tool.poetry.scripts]
format = "scripts.format:main"
test = "scripts.test:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
bandit = "^1.8.3"
black = "^25.1.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-dotenv = "^0.5.2"
httpx = "^0.28.1"
pytest-asyncio = "^0.26.0"
mypy = "^1.15.0"
mutmut = "^2.5.1"
pandas-stubs = "^2.2.2.240818"
types-requests = "^2.32.0.20240818"
locust = "2.37.1"
gevent = "^24.10.1"
zope-event = "^5.0"
zope-interface = "^7.2"


[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.mypy]
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = "extra_streamlit_components"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mood_diary.frontend.*"
disable_error_code = ["import-not-found"]

[tool.mutmut]
paths_to_mutate="mood_diary"
runner="poetry run pytest ./tests/"

[tool.coverage.paths]
source = ["mood_diary", "tests"]
tests = ["tests"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/__main__.py"
]
